--- a/public/styles.css
+++ b/public/styles.css
@@ -128,6 +128,12 @@ button {
   margin-top: 0 !important;
 }
 
+.users > span {
+  color: greenyellow;
+  /* padding-left: 5px; */
+  font-size: 0.5;
+}
+
 /* ScrollBar */
 
 /* width */
