--- a/public/styles.css
+++ b/public/styles.css
@@ -112,10 +112,13 @@ button {
 #send {
   position: absolute;
   width: 15%;
-  font-size: 2rem;
   background-color: transparent;
-  color: #0d6efd;
   display: none;
+}
+
+.material-icons {
+  font-size: 2rem;
+  color: #0dcaf0;
 }
 
 #send a {
